cmake_minimum_required(VERSION 3.19)
project(untitled1)
set(CMAKE_CXX_STANDARD 14)
add_executable(algorithm exp exp.h)
add_executable(BinaryTree BinaryTree.cpp)
add_executable(huffman_tree huffman_tree.cpp)
add_executable(graph algraph.h)
add_executable(fstar fstar.h Fstar.cpp)
add_executable(fstar1 地图染色.cpp)
add_executable(test test01.cpp)
